log/build_2024-07-16_14-41-48/recovery_pipeline/stdout_stderr.log
running egg_info
writing ../../build/recovery_pipeline/recovery_pipeline.egg-info/PKG-INFO
writing dependency_links to ../../build/recovery_pipeline/recovery_pipeline.egg-info/dependency_links.txt
writing entry points to ../../build/recovery_pipeline/recovery_pipeline.egg-info/entry_points.txt
writing requirements to ../../build/recovery_pipeline/recovery_pipeline.egg-info/requires.txt
writing top-level names to ../../build/recovery_pipeline/recovery_pipeline.egg-info/top_level.txt
reading manifest file '../../build/recovery_pipeline/recovery_pipeline.egg-info/SOURCES.txt'
writing manifest file '../../build/recovery_pipeline/recovery_pipeline.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline/error_responders/perpendicular_alignment_to_doorway_and_speed.py to perpendicular_alignment_to_doorway_and_speed.cpython-310.pyc
  File "/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline/error_responders/perpendicular_alignment_to_doorway_and_speed.py", line 13
    self.execute_recovery_tree_client = ActionClient(self, , 'execute_recovery_tree')
                                                           ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/recovery_pipeline/recovery_pipeline.egg-info to /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info
running install_scripts
Installing error_detection script to /home/ollie/ros2_ws/install/recovery_pipeline/lib/recovery_pipeline
Installing error_responder script to /home/ollie/ros2_ws/install/recovery_pipeline/lib/recovery_pipeline
writing list of installed files to '/home/ollie/ros2_ws/build/recovery_pipeline/install.log'
